feat: create new series API routes to return grouped readings separated by dynamic time periods