@@ -1,6 +1,8 @@
 package com.sqlutions.api_4_semestre_backend.service;
 
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -10,13 +12,53 @@ import org.springframework.web.server.ResponseStatusException;
 import com.sqlutions.api_4_semestre_backend.entity.Index;
 import com.sqlutions.api_4_semestre_backend.entity.Radar;
 import com.sqlutions.api_4_semestre_backend.entity.Reading;
+import com.sqlutions.api_4_semestre_backend.entity.ReadingInformation;
 import com.sqlutions.api_4_semestre_backend.repository.ReadingRepository;
 
+/**
+ * Implementação do serviço responsável pelo cálculo dos índices de segurança e tráfego
+ * com base nas leituras de velocidade dos radares.
+ * 
+ * <p>
+ * Esta classe fornece métodos para calcular diferentes tipos de índices (segurança, tráfego,
+ * índices por radar, região e cidade) a partir de listas de leituras ({@link Reading}).
+ * Os índices são utilizados para avaliar as condições de segurança viária e fluxo de tráfego
+ * em diferentes contextos e intervalos de tempo.
+ * </p>
+ * 
+ * <p>
+ * Principais funcionalidades:
+ * <ul>
+ *   <li>Cálculo do índice de segurança, considerando a porcentagem de veículos acima do limite e o excesso médio de velocidade.</li>
+ *   <li>Cálculo do índice de tráfego, levando em conta a densidade de leituras por minuto e a velocidade relativa dos veículos.</li>
+ *   <li>Geração de índices agregados para cidade, regiões ou radares específicos, em intervalos de tempo definidos.</li>
+ *   <li>Agrupamento de leituras para análise temporal e geração de séries históricas de índices.</li>
+ * </ul>
+ * </p>
+ * 
+ * <p>
+ * Os índices variam de 1 a 5, onde valores menores indicam melhores condições de segurança e tráfego.
+ * </p>
+ * 
+ * <p>
+ * Pontos de melhoria futuros:
+ * <ul>
+ *   <li>Considerar horários de pico e capacidade máxima dos radares para refinar o cálculo dos índices.</li>
+ *   <li>Implementar métodos para geração de séries temporais dos índices.</li>
+ * </ul>
+ * </p>
+ * 
+ * @author Gabriel Vasconcelos
+ * @see IndexService
+ */
 @Service
 public class IndexServiceImpl implements IndexService {
 
     @Autowired
     private ReadingRepository readingRepository;
+
+    @Autowired
+    private ReadingService readingService;
 
     /**
      * Calcula o índice de segurança com base em uma lista de leituras de
@@ -61,16 +103,50 @@ public class IndexServiceImpl implements IndexService {
                 .average()
                 .orElse(0.0);
         System.out.println("Average excess: " + averageExcess);
-        
+
         Float rawIndex = ((percentageOverLimit * overLimitWeight) + (averageExcess.floatValue() * averageExcessWeight))
                 / (overLimitWeight + averageExcessWeight);
         System.out.println("Raw index: " + rawIndex + "%");
         Integer index = Math.round(1 + 4 * (rawIndex / 100)); // mapear para 1-5
         return index;
     }
-
+    
+    // TODO: apresentar pontos futuros:
+    // considerar o pico do radar como limite para densidade (comparar ao valor de
+    // D):
+    // quanto mais perto do pico do radar, pior o índice.
+    // considerar também o horário do dia (ex: 7-9 e 17-19 são piores)
+    /**
+     * Calcula o índice de tráfego com base em uma lista de leituras de velocidade.
+     *
+     * <p>
+     * O índice é determinado a partir dos seguintes critérios:
+     * <ul>
+     *   <li>Primeiro, calcula a duração total das leituras (diferença entre a última e a primeira leitura).</li>
+     *   <li>Em seguida, calcula a média de leituras por minuto.</li>
+     *   <li>Calcula a velocidade relativa, que é a razão entre a média das velocidades registradas e a velocidade regulamentada do radar, em porcentagem.</li>
+     *   <li>Classifica o índice de tráfego (I_traf) conforme as regras:
+     *     <ul>
+     *       <li>I_traf = 1, se leituras por minuto &lt; 100 e velocidade relativa &gt; 70%</li>
+     *       <li>I_traf = 2, se 100 ≤ leituras por minuto &lt; 300 e velocidade relativa &gt; 60%</li>
+     *       <li>I_traf = 3, se 300 ≤ leituras por minuto &lt; 600 ou 40% ≤ velocidade relativa ≤ 60%</li>
+     *       <li>I_traf = 4, se leituras por minuto ≥ 600 ou 30% ≤ velocidade relativa &lt; 40%</li>
+     *       <li>I_traf = 5, se velocidade relativa &lt; 30%</li>
+     *     </ul>
+     *   </li>
+     * </ul>
+     *
+     * <p>
+     * Pontos futuros a serem considerados:
+     * <ul>
+     *   <li>Considerar o pico do radar como limite para densidade, comparando ao valor de leituras por minuto.</li>
+     *   <li>Considerar também o horário do dia (ex: 7-9 e 17-19 são horários de pico).</li>
+     * </ul>
+     *
+     * @param readings Lista de leituras de velocidade.
+     * @return Índice de tráfego calculado (1 a 5).
+     */
     private Integer getTrafficIndex(List<Reading> readings) {
-        // primeiro, pegar a duração total das leituras (última leitura - primeira leitura)
         java.time.LocalDateTime maxDate = readings.stream()
                 .map(Reading::getDate)
                 .max(java.time.LocalDateTime::compareTo)
@@ -84,12 +160,10 @@ public class IndexServiceImpl implements IndexService {
         System.out.println("Reading start: " + minDate);
         System.out.println("Reading end: " + maxDate);
         System.out.println("Reading length: " + readingLengthMinutes + " minutes");
-        // depois, calcular a média de leituras por minuto
+
         Float averageReadingsPerMinute = readings.size() / (readingLengthMinutes == 0 ? 1 : readingLengthMinutes);
         System.out.println("Average readings per minute: " + averageReadingsPerMinute);
 
-        // calcular a velocidade relativa (média de velocidade / velocidade
-        // regulamentada) (%)
         Float averageSpeed = (float) readings.stream()
                 .mapToInt(Reading::getSpeed)
                 .average()
@@ -101,18 +175,7 @@ public class IndexServiceImpl implements IndexService {
         Float relativeSpeed = (averageSpeed / averageRegulatedSpeed) * 100;
         System.out.println("Relative speed: " + relativeSpeed + "%");
 
-        // classificar o índice:
-        // I_traf = 1, se D < 100 e V_rel > 70
-        // I_traf = 2, se 100 <= D < 300 e V_rel > 60
-        // I_traf = 3, se 300 <= D < 600 ou 40 <= V_rel <= 60
-        // I_traf = 4, se 600 <= D ou 30 <= V_rel < 40
-        // I_traf = 5, se V_rel < 30
-        
-        // TODO: apresentar pontos futuros:
-        // considerar o pico do radar como limite para densidade (comparar ao valor de D):
-        // quanto mais perto do pico do radar, pior o índice.
-        // considerar também o horário do dia (ex: 7-9 e 17-19 são piores)
-        
+
         Integer index;
         if (averageReadingsPerMinute < 100 && relativeSpeed > 70) {
             index = 1;
@@ -150,7 +213,7 @@ public class IndexServiceImpl implements IndexService {
      * @return valor inteiro representando o índice da cidade (1 a 5, onde menor é
      *         melhor)
      */
-    public List<Index> getCityIndex(int minutes, java.time.LocalDateTime timestamp) {
+    public Index getCityIndex(int minutes, java.time.LocalDateTime timestamp) {
         java.time.LocalDateTime timeEnd = timestamp;
         java.time.LocalDateTime timeStart = timeEnd.minusMinutes(minutes);
         System.out.println("Calculating city index for time range: " + timeStart + " to " + timeEnd);
@@ -167,120 +230,48 @@ public class IndexServiceImpl implements IndexService {
                 .orElse(null);
         System.out.println("First reading date: " + firstReadingDate);
         System.out.println("Last reading date: " + lastReadingDate);
-        List<Index> index = getIndexFromReadings(readings);
+        Index index = getIndexFromReadings(readings);
         return index;
     }
 
     /**
-     * Calculates an aggregated {@link Index} from a list of {@link Reading} objects by grouping them
-     * according to the total period covered by the readings.
+     * Calcula uma lista de objetos {@link Index} a partir de uma lista de objetos {@link Reading}.
      * <p>
-     * Grouping rules:
-     * <ul>
-     *   <li>If the period is less than 1 hour, readings are grouped by 10-minute intervals.</li>
-     *   <li>If the period is less than 1 day, readings are grouped by hour.</li>
-     *   <li>If the period is less than 7 days, readings are grouped by day.</li>
-     * </ul>
-     * <p>
-     * For each group, the method calculates a traffic index and a security index, then aggregates
-     * these indexes across all groups to produce a final {@link Index} result.
-     * <p>
-     * Special handling is performed for broken time series to ensure the first and last groups
-     * are properly clamped to the available data range.
+     * Este método primeiro valida a lista de leituras recebida, garantindo que não seja nula,
+     * não esteja vazia e contenha pelo menos duas leituras. Em seguida, agrupa as leituras usando o
+     * método {@code readingService.groupReadings} e, para cada grupo, calcula os índices de tráfego e segurança.
+     * Os objetos {@link Index} resultantes são criados com os valores calculados e o intervalo de datas de cada grupo.
+     * </p>
      *
-     * @param readings the list of {@link Reading} objects to process; must not be {@code null} or empty,
-     *                 and must contain at least two readings
-     * @return an aggregated {@link Index} representing the sum of indexes calculated for each group
-     * @throws ResponseStatusException if the readings list is {@code null}, empty, or contains fewer than two readings
+     * @param readings a lista de objetos {@link Reading} a ser processada
+     * @return uma lista de objetos {@link Index}, cada um representando os índices calculados para um grupo de leituras
+     * @throws ResponseStatusException se a lista de leituras for nula, vazia ou contiver menos de duas leituras
      */
     @Override
-    public List<Index> getIndexFromReadings(List<Reading> readings) {
+    public List<Index> getIndexesWithGroupedReadings(List<Reading> readings) {
         if (readings == null || readings.isEmpty()) {
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Readings list is null or empty");
         }
-        // if period is less than 1 hour, group by 10 minutes
-        // if period is more than 12 hours, group by hour
-        // if period is more than 7 days, group by day
-
-        // how to process broken time series:
-        // clamp the first and last reading to be the same size
-        // example: lastTime is 10:30 and we'd like the last 12 hours
-        // then we should get from 10:00-10:30, and from then backwards each hour (9:00-10:00, 8:00-9:00, etc.)
-
-        // for 10 minute group, same goes:
-        // if lastTime is 10:35, then we should get from 10:30-10:35, and from then backwards each 10 minutes (10:20-10:30, 10:10-10:20, etc.)
-        
-        // for daily group, same goes:
-        // if lastTime is 2023-10-01 10:35, then we should get from 2023-10-01 00:00 to 2023-10-01 10:35, and from then backwards each day (2023-09-30 00:00 to 2023-10-01 00:00)
 
         if (readings.size() < 2) {
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Not enough readings to calculate index");
         }
 
-        // find the sample period
-        java.time.LocalDateTime firstReadingDate = readings.stream()
-                .map(Reading::getDate)
-                .min(java.time.LocalDateTime::compareTo)
-                .orElse(null);
-        java.time.LocalDateTime lastReadingDate = readings.stream()
-                .map(Reading::getDate)
-                .max(java.time.LocalDateTime::compareTo)
-                .orElse(null);
-        List<List<Reading>> groupedReadings = new java.util.ArrayList<>();
-        java.time.Duration samplePeriod = java.time.Duration.between(firstReadingDate, lastReadingDate);
-        if (samplePeriod.compareTo(java.time.Duration.ofHours(1)) < 0) {
-            System.out.println("Sample period is less than 1 hour, grouping by 10 minutes");
-            readings.sort((r1, r2) -> r1.getDate().compareTo(r2.getDate()));
-            groupedReadings = new java.util.ArrayList<>(
-                readings.stream()
-                    .collect(java.util.stream.Collectors.groupingBy(r -> 
-                        r.getDate().withMinute((r.getDate().getMinute() / 10) * 10).withSecond(0).withNano(0)
-                    ))
-                    .values()
-            );
-        } else if (samplePeriod.compareTo(java.time.Duration.ofDays(1)) < 0) {
-            System.out.println("Sample period is less than 12 hours, grouping by hour");
-            readings.sort((r1, r2) -> r1.getDate().compareTo(r2.getDate()));
-            groupedReadings = new java.util.ArrayList<>(
-                readings.stream()
-                    .collect(java.util.stream.Collectors.groupingBy(r -> 
-                        r.getDate().withMinute(0).withSecond(0).withNano(0).withHour(r.getDate().getHour())
-                    ))
-                    .values()
-            );
-        } else if (samplePeriod.compareTo(java.time.Duration.ofDays(7)) < 0) {
-            System.out.println("Sample period is less than 7 days, grouping by day");
-            readings.sort((r1, r2) -> r1.getDate().compareTo(r2.getDate()));
-            groupedReadings = new java.util.ArrayList<>(
-                readings.stream()
-                    .collect(java.util.stream.Collectors.groupingBy(r -> 
-                        r.getDate().withHour(0).withMinute(0).withSecond(0).withNano(0)
-                    ))
-                    .values()
-            );
-        }
-
-        // now, for each reading group, calculate the indexes and add them to the output index list
         System.out.println("Calculating indexes from readings");
+        List<ReadingInformation> groupedReadings = readingService.groupReadings(readings);
+        for (ReadingInformation info : groupedReadings) {
+            info.setIndex(getIndexFromReadings(info.getReadings()));
+        }
         List<Index> output = groupedReadings.stream()
-            .map(group -> {
-                Integer trafficIndex = getTrafficIndex(group);
-                Integer securityIndex = getSecurityIndex(group);
-                return new Index(securityIndex, trafficIndex, group.get(0).getDate(), group.get(group.size() - 1).getDate());
-            })
-            .toList();
-        System.out.println("Calculated " + output.size() + " indexes from readings");
-        // return the indexes grouped by time
-        return groupedReadings.stream()
-            .map(group -> {
-                Integer trafficIndex = getTrafficIndex(group);
-                Integer securityIndex = getSecurityIndex(group);
-                return new Index(securityIndex, trafficIndex, group.get(0).getDate(), group.get(group.size() - 1).getDate());
-            }).toList();
+                .map(ReadingInformation::getIndex)
+                .collect(Collectors.toList());
+        System.out.println("Calculated " + output.size() + " groups from readings");
+
+        return output;
     }
 
     @Override
-    public List<Index> getRadarIndexes(int minutes, Radar[] radars, java.time.LocalDateTime timestamp) {
+    public Index getRadarIndexes(int minutes, Radar[] radars, java.time.LocalDateTime timestamp) {
         java.time.LocalDateTime timeEnd = timestamp;
         java.time.LocalDateTime timeStart = timeEnd.minusMinutes(minutes);
         System.out.println("Calculating radar index for time range: " + timeStart + " to " + timeEnd);
@@ -288,12 +279,11 @@ public class IndexServiceImpl implements IndexService {
         List<Reading> readings = readingRepository.findByRadarInAndDateBetween(List.of(radars), timeStart, timeEnd);
         System.out.println("Reading count: " + readings.size());
 
-        List<Index> index = getIndexFromReadings(readings);
-        return index;
+        return getIndexFromReadings(readings);
     }
 
     @Override
-    public List<Index> getRegionIndexes(int minutes, String region, java.time.LocalDateTime timestamp) {
+    public Index getRegionIndex(int minutes, String region, java.time.LocalDateTime timestamp) {
         java.time.LocalDateTime timeEnd = timestamp;
         java.time.LocalDateTime timeStart = timeEnd.minusMinutes(minutes);
         System.out.println("Calculating region index for time range: " + timeStart + " to " + timeEnd);
@@ -302,8 +292,54 @@ public class IndexServiceImpl implements IndexService {
                 timeEnd);
         System.out.println("Reading count: " + readings.size());
 
-        List<Index> index = getIndexFromReadings(readings);
-
-        return index;
+        return getIndexFromReadings(readings);
     }
+
+    @Override
+    public Index getIndexFromReadings(List<Reading> readings) {
+        if (readings == null || readings.isEmpty()) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Readings list is null or empty");
+        }
+        Integer trafficIndex = getTrafficIndex(readings);
+        Integer securityIndex = getSecurityIndex(readings);
+
+        return new Index(securityIndex, trafficIndex, readings.get(0).getDate(),
+                readings.get(readings.size() - 1).getDate());
+    }
+
+    @Override
+    public List<Index> getCityIndexSeries(int minutes, LocalDateTime timestamp) {
+        java.time.LocalDateTime timeEnd = timestamp;
+        java.time.LocalDateTime timeStart = timeEnd.minusMinutes(minutes);
+        System.out.println("Calculating city index series for time range: " + timeStart + " to " + timeEnd);
+        List<Reading> readings = readingRepository.findByDateBetween(timeStart, timeEnd);
+        System.out.println("Reading count: " + readings.size());
+        return getIndexesWithGroupedReadings(readings);
+    }
+
+    @Override
+    public List<Index> getRadarIndexesSeries(int minutes, Radar[] radars, LocalDateTime timestamp) {
+        java.time.LocalDateTime timeEnd = timestamp;
+        java.time.LocalDateTime timeStart = timeEnd.minusMinutes(minutes);
+        System.out.println("Calculating radar index series for time range: " + timeStart + " to " + timeEnd);
+
+        List<Reading> readings = readingRepository.findByRadarInAndDateBetween(List.of(radars), timeStart, timeEnd);
+        System.out.println("Reading count: " + readings.size());
+
+        return getIndexesWithGroupedReadings(readings);
+    }
+
+    @Override
+    public List<Index> getRegionIndexSeries(int minutes, String region, LocalDateTime timestamp) {
+        java.time.LocalDateTime timeEnd = timestamp;
+        java.time.LocalDateTime timeStart = timeEnd.minusMinutes(minutes);
+        System.out.println("Calculating region index series for time range: " + timeStart + " to " + timeEnd);
+
+        List<Reading> readings = readingRepository.findByRadarAddressRegionInAndDateBetween(List.of(region), timeStart,
+                timeEnd);
+        System.out.println("Reading count: " + readings.size());
+
+        return getIndexesWithGroupedReadings(readings);
+    }
+
 }
